fixed some spacing errors on the feed page

--- a/src/components/FeedCard/FeedCard.css
+++ b/src/components/FeedCard/FeedCard.css
@@ -8,7 +8,7 @@
     /* background: rgb(93,138,112);
     background: radial-gradient(circle, rgba(93,138,112,1) -21%, rgba(72,128,79,1) 9%, rgba(108,157,114,1) 100%); */
     background-image: linear-gradient(45deg,  #243D25,#6BCB77);
-background-image: -webkit-linear-gradient(45deg,  #243D25,#6BCB77);
+    background-image: -webkit-linear-gradient(45deg,  #243D25,#6BCB77);
     padding: 2%;
     transition: all 0.2s ease-in-out;
     display: flex;
@@ -33,6 +33,7 @@ background-image: -webkit-linear-gradient(45deg,  #243D25,#6BCB77);
     display: grid;
     gap: 1.5rem;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    overflow: hidden;
   }
   
   /* Single column layout for recommendations */
