--- a/src/components/Widgets/WidgetCard.css
+++ b/src/components/Widgets/WidgetCard.css
@@ -7,7 +7,7 @@
     background: radial-gradient(circle, rgba(113,169,136,1) -21%, rgba(72,128,79,1) 9%, rgba(108,157,114,1) 100%); */
     background: rgb(93,138,112);
     background: radial-gradient(circle, rgba(93,138,112,1) -21%, rgba(72,128,79,1) 9%, rgba(108,157,114,1) 100%);
-    padding: 1% 3%;
+    padding: 3% 3%;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
